// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it top-aligns children by default 1`] = `
.c2 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  width: 100%;
}

.c5 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}

.c7 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  background-color: #e3e3e3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  overflow: hidden;
}

.c0 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: 0;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c4 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  padding-top: 0;
  padding-left: 0;
  height: 100%;
}

.c1 {
  min-width: 0;
}

div:first-child > .c3 {
  padding-top: 0;
}

.c6 {
  width: 100%;
  min-width: 40px;
  height: 100px;
  border: 2px solid rgba(51,51,51,0.3);
}

.c8 {
  width: 100%;
  min-width: 40px;
  height: 40px;
  border: 2px solid rgba(51,51,51,0.3);
}

.c9 {
  width: 100%;
  min-width: 40px;
  height: 70px;
  border: 2px solid rgba(51,51,51,0.3);
}

<div>
  <div
    class="c0"
    data-id="my-cols"
    display="flex"
  >
    <div
      class="c1 c2"
      data-id="column"
      width="full"
    >
      <div
        class="c3 c4"
        height="full"
      >
        <div
          class="c5"
        >
          <div
            class="c6 c7"
            data-id="placeholder"
            display="flex"
            height="100px"
            overflow="hidden"
            shape="rectangle"
            width="100%"
          >
            <svg
              style="width: 100%; height: 100%; position: absolute;"
              xmlns="http://www.w3.org/2000/svg"
            >
              <line
                style="stroke-width: 2px; stroke: rgba(51,51,51,.1);"
                x1="0"
                x2="100%"
                y1="0"
                y2="100%"
              />
              <line
                style="stroke-width: 2px; stroke: rgba(51,51,51,.1);"
                x1="100%"
                x2="0"
                y1="0"
                y2="100%"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 c2"
      data-id="column"
      width="full"
    >
      <div
        class="c3 c4"
        height="full"
      >
        <div
          class="c5"
        >
          <div
            class="c8 c7"
            data-id="placeholder"
            display="flex"
            height="40px"
            overflow="hidden"
            shape="rectangle"
            width="100%"
          >
            <svg
              style="width: 100%; height: 100%; position: absolute;"
              xmlns="http://www.w3.org/2000/svg"
            >
              <line
                style="stroke-width: 2px; stroke: rgba(51,51,51,.1);"
                x1="0"
                x2="100%"
                y1="0"
                y2="100%"
              />
              <line
                style="stroke-width: 2px; stroke: rgba(51,51,51,.1);"
                x1="100%"
                x2="0"
                y1="0"
                y2="100%"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 c2"
      data-id="column"
      width="full"
    >
      <div
        class="c3 c4"
        height="full"
      >
        <div
          class="c5"
        >
          <div
            class="c9 c7"
            data-id="placeholder"
            display="flex"
            height="70px"
            overflow="hidden"
            shape="rectangle"
            width="100%"
          >
            <svg
              style="width: 100%; height: 100%; position: absolute;"
              xmlns="http://www.w3.org/2000/svg"
            >
              <line
                style="stroke-width: 2px; stroke: rgba(51,51,51,.1);"
                x1="0"
                x2="100%"
                y1="0"
                y2="100%"
              />
              <line
                style="stroke-width: 2px; stroke: rgba(51,51,51,.1);"
                x1="100%"
                x2="0"
                y1="0"
                y2="100%"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`it vertically aligns children bottom if alignY is bottom 1`] = `
.c2 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  width: 100%;
}

.c5 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}

.c7 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  background-color: #e3e3e3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  overflow: hidden;
}

.c4 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  padding-top: 0;
  padding-left: 0;
  height: 100%;
}

.c0 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: 0;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c1 {
  min-width: 0;
}

div:first-child > .c3 {
  padding-top: 0;
}

.c6 {
  width: 100%;
  min-width: 40px;
  height: 100px;
  border: 2px solid rgba(51,51,51,0.3);
}

.c8 {
  width: 100%;
  min-width: 40px;
  height: 40px;
  border: 2px solid rgba(51,51,51,0.3);
}

.c9 {
  width: 100%;
  min-width: 40px;
  height: 70px;
  border: 2px solid rgba(51,51,51,0.3);
}

<div>
  <div
    class="c0"
    data-id="columns"
    display="flex"
  >
    <div
      class="c1 c2"
      data-id="column"
      width="full"
    >
      <div
        class="c3 c4"
        height="full"
      >
        <div
          class="c5"
        >
          <div
            class="c6 c7"
            data-id="placeholder"
            display="flex"
            height="100px"
            overflow="hidden"
            shape="rectangle"
            width="100%"
          >
            <svg
              style="width: 100%; height: 100%; position: absolute;"
              xmlns="http://www.w3.org/2000/svg"
            >
              <line
                style="stroke-width: 2px; stroke: rgba(51,51,51,.1);"
                x1="0"
                x2="100%"
                y1="0"
                y2="100%"
              />
              <line
                style="stroke-width: 2px; stroke: rgba(51,51,51,.1);"
                x1="100%"
                x2="0"
                y1="0"
                y2="100%"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 c2"
      data-id="column"
      width="full"
    >
      <div
        class="c3 c4"
        height="full"
      >
        <div
          class="c5"
        >
          <div
            class="c8 c7"
            data-id="placeholder"
            display="flex"
            height="40px"
            overflow="hidden"
            shape="rectangle"
            width="100%"
          >
            <svg
              style="width: 100%; height: 100%; position: absolute;"
              xmlns="http://www.w3.org/2000/svg"
            >
              <line
                style="stroke-width: 2px; stroke: rgba(51,51,51,.1);"
                x1="0"
                x2="100%"
                y1="0"
                y2="100%"
              />
              <line
                style="stroke-width: 2px; stroke: rgba(51,51,51,.1);"
                x1="100%"
                x2="0"
                y1="0"
                y2="100%"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 c2"
      data-id="column"
      width="full"
    >
      <div
        class="c3 c4"
        height="full"
      >
        <div
          class="c5"
        >
          <div
            class="c9 c7"
            data-id="placeholder"
            display="flex"
            height="70px"
            overflow="hidden"
            shape="rectangle"
            width="100%"
          >
            <svg
              style="width: 100%; height: 100%; position: absolute;"
              xmlns="http://www.w3.org/2000/svg"
            >
              <line
                style="stroke-width: 2px; stroke: rgba(51,51,51,.1);"
                x1="0"
                x2="100%"
                y1="0"
                y2="100%"
              />
              <line
                style="stroke-width: 2px; stroke: rgba(51,51,51,.1);"
                x1="100%"
                x2="0"
                y1="0"
                y2="100%"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`it vertically aligns children middle if alignY is center 1`] = `
.c2 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  width: 100%;
}

.c5 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}

.c7 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  background-color: #e3e3e3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  overflow: hidden;
}

.c4 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  padding-top: 0;
  padding-left: 0;
  height: 100%;
}

.c0 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  min-width: 0;
}

div:first-child > .c3 {
  padding-top: 0;
}

.c6 {
  width: 100%;
  min-width: 40px;
  height: 100px;
  border: 2px solid rgba(51,51,51,0.3);
}

.c8 {
  width: 100%;
  min-width: 40px;
  height: 40px;
  border: 2px solid rgba(51,51,51,0.3);
}

.c9 {
  width: 100%;
  min-width: 40px;
  height: 70px;
  border: 2px solid rgba(51,51,51,0.3);
}

<div>
  <div
    class="c0"
    data-id="columns"
    display="flex"
  >
    <div
      class="c1 c2"
      data-id="column"
      width="full"
    >
      <div
        class="c3 c4"
        height="full"
      >
        <div
          class="c5"
        >
          <div
            class="c6 c7"
            data-id="placeholder"
            display="flex"
            height="100px"
            overflow="hidden"
            shape="rectangle"
            width="100%"
          >
            <svg
              style="width: 100%; height: 100%; position: absolute;"
              xmlns="http://www.w3.org/2000/svg"
            >
              <line
                style="stroke-width: 2px; stroke: rgba(51,51,51,.1);"
                x1="0"
                x2="100%"
                y1="0"
                y2="100%"
              />
              <line
                style="stroke-width: 2px; stroke: rgba(51,51,51,.1);"
                x1="100%"
                x2="0"
                y1="0"
                y2="100%"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 c2"
      data-id="column"
      width="full"
    >
      <div
        class="c3 c4"
        height="full"
      >
        <div
          class="c5"
        >
          <div
            class="c8 c7"
            data-id="placeholder"
            display="flex"
            height="40px"
            overflow="hidden"
            shape="rectangle"
            width="100%"
          >
            <svg
              style="width: 100%; height: 100%; position: absolute;"
              xmlns="http://www.w3.org/2000/svg"
            >
              <line
                style="stroke-width: 2px; stroke: rgba(51,51,51,.1);"
                x1="0"
                x2="100%"
                y1="0"
                y2="100%"
              />
              <line
                style="stroke-width: 2px; stroke: rgba(51,51,51,.1);"
                x1="100%"
                x2="0"
                y1="0"
                y2="100%"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 c2"
      data-id="column"
      width="full"
    >
      <div
        class="c3 c4"
        height="full"
      >
        <div
          class="c5"
        >
          <div
            class="c9 c7"
            data-id="placeholder"
            display="flex"
            height="70px"
            overflow="hidden"
            shape="rectangle"
            width="100%"
          >
            <svg
              style="width: 100%; height: 100%; position: absolute;"
              xmlns="http://www.w3.org/2000/svg"
            >
              <line
                style="stroke-width: 2px; stroke: rgba(51,51,51,.1);"
                x1="0"
                x2="100%"
                y1="0"
                y2="100%"
              />
              <line
                style="stroke-width: 2px; stroke: rgba(51,51,51,.1);"
                x1="100%"
                x2="0"
                y1="0"
                y2="100%"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
